--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,9 +11,22 @@ ja:
     btn_name:
       lending: 貸出する
       return: 返却する
+    label:
+      user_name: 借りている利用者名
+      date: 貸出日
+      limit: 返却期限
+      period: 貸出期間
   books:
-    title: 蔵書一覧
+    title:
+      index: 蔵書一覧
+      detail: 書籍詳細
     btn_name:
       add: 書籍を登録する
       show: 書籍情報を確認・編集する
       delete: 書籍を削除する
+      edit: 書籍情報を更新する
+    form_label:
+      title: 書籍タイトル
+      author_name: 著者名
+  message:
+    edit_error: 貸出中のため、書籍情報を変更できません
